--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "a website imitated cnode based on react",
   "main": "index.js",
   "scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "webpack --config config/webpack.config.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cross-env NODE_ENV=development webpack --config config/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,16 @@
   },
   "homepage": "https://github.com/front-end-captain/cnode_imitated#readme",
   "dependencies": {
+    "clean-webpack-plugin": "^0.1.18",
+    "cross-env": "^5.1.3",
+    "html-webpack-plugin": "^2.30.1",
     "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "webpack": "^3.10.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-react-app": "^3.1.1"
   }
 }
