--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "a website imitated cnode based on react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=development webpack --config config/webpack.config.js"
+    "build:client": "cross-env NODE_ENV=development webpack --config config/webpack.config.client.js",
+    "build:server": "cross-env NODE_ENV=development webpack --config config/webpack.config.server.js",
+    "build": "npm run build:client && npm run build:server",
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
   "dependencies": {
     "clean-webpack-plugin": "^0.1.18",
     "cross-env": "^5.1.3",
+    "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
