--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build:client": "cross-env NODE_ENV=development webpack --config config/webpack.config.client.js",
     "build:server": "cross-env NODE_ENV=development webpack --config config/webpack.config.server.js",
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.client.js",
     "build": "npm run build:client && npm run build:server",
     "start": "node server/server.js"
   },
@@ -32,6 +33,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-react-app": "^3.1.1"
+    "babel-preset-react-app": "^3.1.1",
+    "webpack-dev-server": "^2.11.1"
   }
 }
