--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:client": "cross-env NODE_ENV=development webpack --config config/webpack.config.client.js",
     "build:server": "cross-env NODE_ENV=development webpack --config config/webpack.config.server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.client.js",
-    "dev:server": "cross-env NODE_ENV=development node server/server.js",
+    "dev:server": "nodemon server/server.js",
     "build": "npm run build:client && npm run build:server",
     "lint": "eslint --ext .js,.jsx src",
     "precommit": "npm run lint"
@@ -32,6 +32,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
+    "serve-favicon": "^2.4.5",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
