--- a/package.json
+++ b/package.json
@@ -25,13 +25,21 @@
   "homepage": "https://github.com/front-end-captain/cnode_imitated#readme",
   "dependencies": {
     "babel-eslint": "^8.2.1",
+    "body-parser": "^1.18.2",
     "clean-webpack-plugin": "^0.1.18",
     "cross-env": "^5.1.3",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "html-webpack-plugin": "^2.30.1",
+    "mobx": "^3.5.1",
+    "mobx-react": "^4.4.1",
+    "prop-types": "^15.6.0",
+    "query-string": "^5.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "serve-favicon": "^2.4.5",
     "webpack": "^3.10.0"
   },
@@ -39,6 +47,7 @@
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-app": "^3.1.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
