--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -14,6 +14,13 @@
 		"space-in-parens": [0],
 		"no-tabs": [0],
 		"global-require": [0],
-		"react/jsx-filename-extension": [0]
+		"react/jsx-filename-extension": [0],
+		"indent": [0],
+		"react/jsx-indent": [0],
+		"jsx-a11y/anchor-is-valid": [0],
+		"import/extensions": [0],
+		"react/jsx-curly-spacing": [0],
+		"react/jsx-tag-spacing": [0],
+		"react/require-default-props": [0]
 	}
 }
