--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -21,6 +21,8 @@
 		"import/extensions": [0],
 		"react/jsx-curly-spacing": [0],
 		"react/jsx-tag-spacing": [0],
-		"react/require-default-props": [0]
+		"react/require-default-props": [0],
+		"no-console": [0],
+		"class-methods-use-this": [0]
 	}
 }
