--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "body-parser": "^1.18.2",
     "clean-webpack-plugin": "^0.1.18",
     "cross-env": "^5.1.3",
+    "ejs": "^2.5.7",
+    "ejs-compiled-loader": "^1.1.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "html-webpack-plugin": "^2.30.1",
@@ -36,10 +38,12 @@
     "prop-types": "^15.6.0",
     "query-string": "^5.1.0",
     "react": "^16.2.0",
+    "react-async-bootstrapper": "^1.1.2",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "serialize-javascript": "^1.4.0",
     "serve-favicon": "^2.4.5",
     "webpack": "^3.10.0"
   },
