--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -23,6 +23,7 @@
 		"react/jsx-tag-spacing": [0],
 		"react/require-default-props": [0],
 		"no-console": [0],
-		"class-methods-use-this": [0]
+		"class-methods-use-this": [0],
+		"arrow-body-style": [0]
 	}
 }
