--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-router-dom": "^4.2.2",
     "serialize-javascript": "^1.4.0",
     "serve-favicon": "^2.4.5",
-    "webpack": "^3.10.0"
+		"webpack": "^3.10.0",
+    "react-helmet": "^5.2.0"
   },
   "devDependencies": {
     "axios": "^0.17.1",
