将服务端渲染用于生产环境 并修复部分bug

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
 	],
 	"plugins": [
 		"transform-decorators-legacy",
-		"react-hot-loader/babel"
+		"react-hot-loader/babel",
+		"babel-plugin-styled-components"
 	]
 }
