--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:server": "nodemon server/server.js",
     "build": "npm run build:client && npm run build:server",
     "lint": "eslint --ext .js,.jsx src",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "start": "cross-env NODE_ENV=production node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -40,18 +41,20 @@
     "react": "^16.2.0",
     "react-async-bootstrapper": "^1.1.2",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-hot-loader": "^3.1.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "serialize-javascript": "^1.4.0",
     "serve-favicon": "^2.4.5",
-		"webpack": "^3.10.0",
-    "react-helmet": "^5.2.0"
+    "styled-components": "^3.1.6",
+    "webpack": "^3.10.0"
   },
   "devDependencies": {
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-styled-components": "^1.5.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-app": "^3.1.1",
     "eslint": "^4.17.0",
