--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -24,6 +24,7 @@
 		"react/require-default-props": [0],
 		"no-console": [0],
 		"class-methods-use-this": [0],
-		"arrow-body-style": [0]
+		"arrow-body-style": [0],
+		"padded-blocks": [0]
 	}
 }
