--- a/package.json
+++ b/package.json
@@ -25,17 +25,26 @@
   },
   "homepage": "https://github.com/front-end-captain/cnode_imitated#readme",
   "dependencies": {
+    "autoprefixer": "^8.0.0",
+    "axios": "^0.17.1",
     "babel-eslint": "^8.2.1",
     "body-parser": "^1.18.2",
     "clean-webpack-plugin": "^0.1.18",
     "cross-env": "^5.1.3",
+    "css-loader": "^0.28.9",
     "ejs": "^2.5.7",
     "ejs-compiled-loader": "^1.1.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
-    "mobx": "^3.5.1",
-    "mobx-react": "^4.4.1",
+    "moment": "^2.20.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-flexbugs-fixes": "^3.3.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.0",
+    "postcss-url": "^7.3.0",
     "prop-types": "^15.6.0",
     "query-string": "^5.1.0",
     "react": "^16.2.0",
@@ -43,15 +52,20 @@
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^3.1.3",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "serialize-javascript": "^1.4.0",
     "serve-favicon": "^2.4.5",
+    "style-loader": "^0.20.2",
     "styled-components": "^3.1.6",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
-    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-styled-components": "^1.5.0",
