--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -25,6 +25,10 @@
 		"no-console": [0],
 		"class-methods-use-this": [0],
 		"arrow-body-style": [0],
-		"padded-blocks": [0]
+		"padded-blocks": [0],
+		"no-trailing-spaces": [0],
+		"react/jsx-indent-props": [0],
+		"no-nested-ternary": [0],
+		"no-underscore-dangle": [0]
 	}
 }
