--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "a website imitated cnode based on react",
   "main": "index.js",
   "scripts": {
-    "build:client": "cross-env NODE_ENV=development webpack --config config/webpack.config.client.js",
+    "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.config.prod.js",
     "build:server": "cross-env NODE_ENV=development webpack --config config/webpack.config.server.js",
-    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.client.js",
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.dev.js",
     "dev:server": "nodemon server/server.js",
     "build": "npm run build:client && npm run build:server",
     "lint": "eslint --ext .js,.jsx src",
@@ -40,6 +40,7 @@
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "moment": "^2.20.1",
+    "name-all-modules-plugin": "^1.0.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-flexbugs-fixes": "^3.3.0",
     "postcss-import": "^11.1.0",
@@ -84,6 +85,7 @@
     "http-proxy-middleware": "^0.17.4",
     "husky": "^0.14.3",
     "memory-fs": "^0.4.1",
+    "webpack-bundle-analyzer": "^2.10.0",
     "webpack-dev-server": "^2.11.1"
   }
 }
