--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.config.prod.js",
-    "build:server": "cross-env NODE_ENV=development webpack --config config/webpack.config.server.js",
+    "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.dev.js",
     "dev:server": "nodemon server/server.js",
     "build": "npm run build:client && npm run build:server",
