--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postcss-url": "^7.3.0",
     "prop-types": "^15.6.0",
     "query-string": "^5.1.0",
+    "rc-pagination": "^1.15.1",
     "react": "^16.2.0",
     "react-async-bootstrapper": "^1.1.2",
     "react-dom": "^16.2.0",
