--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -29,6 +29,7 @@
 		"no-trailing-spaces": [0],
 		"react/jsx-indent-props": [0],
 		"no-nested-ternary": [0],
-		"no-underscore-dangle": [0]
+		"no-underscore-dangle": [0],
+		"prefer-destructuring": [0]
 	}
 }
