--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
+    "marked": "^0.3.16",
     "moment": "^2.20.1",
     "name-all-modules-plugin": "^1.0.1",
     "postcss-cssnext": "^3.1.0",
