--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
+    "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^2.30.1",
     "marked": "^0.3.16",
     "moment": "^2.20.1",
