--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -30,6 +30,8 @@
 		"react/jsx-indent-props": [0],
 		"no-nested-ternary": [0],
 		"no-underscore-dangle": [0],
-		"prefer-destructuring": [0]
+		"prefer-destructuring": [0],
+		"camelcase": [1],
+		"no-irregular-whitespace": [0]
 	}
 }
