--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
   },
   "homepage": "https://github.com/front-end-captain/cnode_imitated#readme",
   "dependencies": {
+    "antd": "^3.2.3",
+    "antd-mobile": "^2.1.6",
     "autoprefixer": "^8.0.0",
     "axios": "^0.17.1",
     "babel-eslint": "^8.2.1",
+    "babel-plugin-import": "^1.6.5",
     "body-parser": "^1.18.2",
+    "braft-editor": "^1.6.1",
     "clean-webpack-plugin": "^0.1.18",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.9",
