--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -34,6 +34,7 @@
 		"camelcase": [1],
 		"no-irregular-whitespace": [0],
 		"jsx-a11y/no-static-element-interactions": [0],
-		"jsx-a11y/click-events-have-key-events": [0]
+		"jsx-a11y/click-events-have-key-events": [0],
+		"no-return-assign": ["off"]
 	}
 }
