--- a/package.json
+++ b/package.json
@@ -92,6 +92,11 @@
     "http-proxy-middleware": "^0.17.4",
     "husky": "^0.14.3",
     "memory-fs": "^0.4.1",
+    "stylelint": "^9.1.3",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-custom-processor-loader": "^0.4.0",
+    "stylelint-processor-styled-components": "^1.3.1",
     "webpack-bundle-analyzer": "^2.10.0",
     "webpack-dev-server": "^2.11.1"
   }
