--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -35,6 +35,7 @@
 		"jsx-a11y/no-static-element-interactions": [0],
 		"jsx-a11y/click-events-have-key-events": [0],
 		"no-return-assign": ["off"],
-		"consistent-return": ["error", { "treatUndefinedAsUnspecified": true }]
+		"consistent-return": ["error", { "treatUndefinedAsUnspecified": true }],
+		"dot-notation": ["warn"]
 	}
 }
