--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.config.prod.js",
     "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.dev.js",
-    "dev:server": "nodemon server/server.js",
+		"dev:server": "nodemon server/server.js",
+		"upload": "node config/upload.js",
+		"deploy": "npm run build && npm run upload",
     "build": "npm run build:client && npm run build:server",
     "lint": "eslint --ext .js,.jsx src",
     "precommit": "npm run lint",
@@ -93,6 +95,7 @@
     "http-proxy-middleware": "^0.17.4",
     "husky": "^0.14.3",
     "memory-fs": "^0.4.1",
+    "qiniu": "^7.1.3",
     "stylelint": "^9.1.3",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
