--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "npm run build:client && npm run build:server",
     "lint": "eslint --ext .js,.jsx src",
     "precommit": "npm run lint",
-    "start": "cross-env NODE_ENV=production node server/server.js"
+		"start": "cross-env NODE_ENV=production node server/server.js",
+		"fix": "eslint --fix --ext .js,.jsx src"
   },
   "repository": {
     "type": "git",
