--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.config.prod.js",
     "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.dev.js",
-    "dev:server": "nodemon server/server.js",
+    "dev:server": "cross-env NODE_ENV=development nodemon server/server.js",
     "upload": "node config/upload.js",
     "deploy": "npm run build && npm run upload",
     "build": "npm run build:client && npm run build:server",
     "lint": "eslint --ext .js,.jsx src",
     "precommit": "npm run lint",
-		"start": "cross-env NODE_ENV=production node server/server.js",
-		"fix": "eslint --fix --ext .js,.jsx src"
+    "start": "cross-env NODE_ENV=production node server/server.js",
+    "fix": "eslint --fix --ext .js,.jsx src"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,7 @@
   "dependencies": {
     "antd": "^3.2.3",
     "autoprefixer": "^8.0.0",
-    "axios": "^0.17.1",
+    "axios": "^0.18.0",
     "babel-eslint": "^8.2.1",
     "babel-plugin-import": "^1.6.5",
     "body-parser": "^1.18.2",
