--- a/package.json
+++ b/package.json
@@ -34,18 +34,19 @@
     "babel-eslint": "^8.2.1",
     "babel-plugin-import": "^1.6.5",
     "body-parser": "^1.18.2",
-    "braft-editor": "^1.6.1",
     "clean-webpack-plugin": "^0.1.18",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.9",
     "ejs": "^2.5.7",
     "ejs-compiled-loader": "^1.1.0",
+    "es6-promise": "^4.2.4",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^2.30.1",
+    "isomorphic-fetch": "^2.2.1",
     "js-md5": "^0.7.3",
     "marked": "^0.3.16",
     "moment": "^2.20.1",
