--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"lint": "eslint --ext .js,.jsx src",
 		"precommit": "npm run lint",
 		"start": "cross-env NODE_ENV=production node server/server.js",
-		"fix": "eslint --fix --ext .js,.jsx src"
+		"fix": "eslint --fix --ext .js,.jsx src",
+		"test:prod": "node config/webpack.config.prod.js"
 	},
 	"repository": {
 		"type": "git",
@@ -50,41 +51,23 @@
 		"styled-components": "^3.1.6"
 	},
 	"devDependencies": {
-		"serve-favicon": "^2.4.5",
-		"serialize-javascript": "^1.4.0",
-		"query-string": "^5.1.0",
-		"url-loader": "^0.6.2",
-		"webpack": "^3.10.0",
-		"style-loader": "^0.20.2",
-		"redux-devtools-extension": "^2.13.2",
 		"autoprefixer": "^8.0.0",
+		"babel-core": "^6.26.0",
 		"babel-eslint": "^8.2.1",
+		"babel-loader": "^7.1.2",
 		"babel-plugin-import": "^1.6.5",
+		"babel-plugin-styled-components": "^1.5.0",
+		"babel-plugin-transform-decorators-legacy": "^1.3.4",
+		"babel-preset-react-app": "^3.1.1",
 		"body-parser": "^1.18.2",
+		"chalk": "^2.4.1",
 		"clean-webpack-plugin": "^0.1.18",
 		"cross-env": "^5.1.3",
 		"css-loader": "^0.28.9",
 		"ejs": "^2.5.7",
 		"ejs-compiled-loader": "^1.1.0",
 		"es6-promise": "^4.2.4",
-		"express": "^4.16.2",
-		"express-session": "^1.15.6",
-		"extract-text-webpack-plugin": "^3.0.2",
-		"file-loader": "^1.1.6",
-		"html-webpack-plugin": "^2.30.1",
-		"isomorphic-fetch": "^2.2.1",
-		"babel-core": "^6.26.0",
-		"babel-loader": "^7.1.2",
-		"babel-plugin-styled-components": "^1.5.0",
-		"babel-plugin-transform-decorators-legacy": "^1.3.4",
-		"babel-preset-react-app": "^3.1.1",
 		"eslint": "^4.17.0",
-		"name-all-modules-plugin": "^1.0.1",
-		"postcss-cssnext": "^3.1.0",
-		"postcss-flexbugs-fixes": "^3.3.0",
-		"postcss-import": "^11.1.0",
-		"postcss-loader": "^2.1.0",
-		"postcss-url": "^7.3.0",
 		"eslint-config-airbnb": "^16.1.0",
 		"eslint-config-standard": "^11.0.0-beta.0",
 		"eslint-loader": "^1.9.0",
@@ -94,15 +77,34 @@
 		"eslint-plugin-promise": "^3.6.0",
 		"eslint-plugin-react": "^7.6.1",
 		"eslint-plugin-standard": "^3.0.1",
+		"express": "^4.16.2",
+		"express-session": "^1.15.6",
+		"extract-text-webpack-plugin": "^3.0.2",
+		"file-loader": "^1.1.6",
+		"html-webpack-plugin": "^2.30.1",
 		"http-proxy-middleware": "^0.17.4",
 		"husky": "^0.14.3",
+		"isomorphic-fetch": "^2.2.1",
 		"memory-fs": "^0.4.1",
+		"name-all-modules-plugin": "^1.0.1",
+		"postcss-cssnext": "^3.1.0",
+		"postcss-flexbugs-fixes": "^3.3.0",
+		"postcss-import": "^11.1.0",
+		"postcss-loader": "^2.1.0",
+		"postcss-url": "^7.3.0",
 		"qiniu": "^7.1.3",
+		"query-string": "^5.1.0",
+		"redux-devtools-extension": "^2.13.2",
+		"serialize-javascript": "^1.4.0",
+		"serve-favicon": "^2.4.5",
+		"style-loader": "^0.20.2",
 		"stylelint": "^9.1.3",
 		"stylelint-config-standard": "^18.2.0",
 		"stylelint-config-styled-components": "^0.1.1",
 		"stylelint-custom-processor-loader": "^0.4.0",
 		"stylelint-processor-styled-components": "^1.3.1",
+		"url-loader": "^0.6.2",
+		"webpack": "^3.10.0",
 		"webpack-bundle-analyzer": "^2.10.0",
 		"webpack-dev-server": "^2.11.1"
 	}
