--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "a website imitated cnode based on react",
 	"main": "index.js",
 	"scripts": {
-		"build:client": "cross-env NODE_ENV=production webpack --config config/webpack.config.prod.js",
+		"build:client": "cross-env NODE_ENV=production webpack --progress --config config/webpack.config.prod.js",
 		"build:server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server.js",
+		"build:dll": "cross-env NODE_ENV=production webpack --config config/webpack.config.dll.js",
 		"dev:client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.dev.js",
 		"dev:server": "cross-env NODE_ENV=development nodemon server/server.js",
 		"upload": "node config/upload.js",
@@ -31,12 +32,10 @@
 	"dependencies": {
 		"antd": "^3.2.3",
 		"axios": "^0.18.0",
-		"highlight.js": "^9.12.0",
 		"js-md5": "^0.7.3",
 		"marked": "^0.3.16",
 		"moment": "^2.20.1",
 		"prop-types": "^15.6.0",
-		"rc-pagination": "^1.15.1",
 		"react": "^16.2.0",
 		"react-async-bootstrapper": "^1.1.2",
 		"react-dom": "^16.2.0",
@@ -51,6 +50,7 @@
 		"styled-components": "^3.1.6"
 	},
 	"devDependencies": {
+		"add-asset-html-webpack-plugin": "^2.1.3",
 		"autoprefixer": "^8.0.0",
 		"babel-core": "^6.26.0",
 		"babel-eslint": "^8.2.1",
@@ -81,6 +81,7 @@
 		"express-session": "^1.15.6",
 		"extract-text-webpack-plugin": "^3.0.2",
 		"file-loader": "^1.1.6",
+		"happypack": "^5.0.0",
 		"html-webpack-plugin": "^2.30.1",
 		"http-proxy-middleware": "^0.17.4",
 		"husky": "^0.14.3",
