--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -38,6 +38,7 @@
 		"consistent-return": ["error", { "treatUndefinedAsUnspecified": true }],
 		"dot-notation": ["warn"],
 		"linebreak-style": "off",
-		"quotes": ["error", "double"]
+		"quotes": ["error", "double"],
+		"no-console": ["warn", { "allow": ["warn", "error", "log"] }]
 	}
 }
