--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
 		["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }] ,
 		"transform-decorators-legacy",
 		"react-hot-loader/babel",
-		"babel-plugin-styled-components"
+		"babel-plugin-styled-components",
+		"syntax-dynamic-import"
 	]
 }
