--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"react-dom": "^16.2.0",
 		"react-helmet": "^5.2.0",
 		"react-hot-loader": "^3.1.3",
+		"react-loadable": "^5.4.0",
 		"react-redux": "^5.0.7",
 		"react-router": "^4.2.0",
 		"react-router-dom": "^4.2.2",
@@ -57,6 +58,7 @@
 		"babel-loader": "^7.1.2",
 		"babel-plugin-import": "^1.6.5",
 		"babel-plugin-styled-components": "^1.5.0",
+		"babel-plugin-syntax-dynamic-import": "^6.18.0",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
 		"babel-preset-react-app": "^3.1.1",
 		"body-parser": "^1.18.2",
