--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,13 @@
 {
 	"presets": [
-		"react-app"
+		"@babel/preset-env",
+		"@babel/preset-react"
 	],
 	"plugins": [
-		["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }] ,
-		"transform-decorators-legacy",
+		["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }],
+		["@babel/plugin-proposal-decorators", { "legacy": true }],
+		["@babel/plugin-proposal-class-properties", { "loose" : true }],
+		["@babel/plugin-proposal-object-rest-spread", { "loose": true }],
 		"react-hot-loader/babel",
 		"babel-plugin-styled-components",
 		"syntax-dynamic-import"
