--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"homepage": "https://github.com/front-end-captain/cnode_imitated#readme",
 	"dependencies": {
+		"@babel/polyfill": "^7.0.0",
 		"antd": "^3.2.3",
 		"axios": "^0.18.0",
 		"js-md5": "^0.7.3",
@@ -51,44 +52,49 @@
 		"styled-components": "^3.1.6"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.0.0",
+		"@babel/plugin-proposal-class-properties": "^7.0.0",
+		"@babel/plugin-proposal-decorators": "^7.0.0",
+		"@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+		"@babel/preset-env": "^7.0.0",
+		"@babel/preset-react": "^7.0.0",
 		"add-asset-html-webpack-plugin": "^2.1.3",
 		"autoprefixer": "^8.0.0",
-		"babel-core": "^6.26.0",
 		"babel-eslint": "^8.2.1",
-		"babel-loader": "^7.1.2",
+		"babel-loader": "^8.0.2",
 		"babel-plugin-import": "^1.6.5",
 		"babel-plugin-styled-components": "^1.5.0",
 		"babel-plugin-syntax-dynamic-import": "^6.18.0",
-		"babel-plugin-transform-decorators-legacy": "^1.3.4",
-		"babel-preset-react-app": "^3.1.1",
 		"body-parser": "^1.18.2",
 		"chalk": "^2.4.1",
 		"clean-webpack-plugin": "^0.1.18",
 		"cross-env": "^5.1.3",
+		"css-hot-loader": "^1.4.2",
 		"css-loader": "^0.28.9",
 		"ejs": "^2.5.7",
 		"ejs-compiled-loader": "^1.1.0",
 		"es6-promise": "^4.2.4",
-		"eslint": "^4.17.0",
-		"eslint-config-airbnb": "^16.1.0",
+		"eslint": "^5.5.0",
+		"eslint-config-airbnb": "^17.1.0",
+		"eslint-config-airbnb-base": "^13.1.0",
 		"eslint-config-standard": "^11.0.0-beta.0",
-		"eslint-loader": "^1.9.0",
-		"eslint-plugin-import": "^2.8.0",
-		"eslint-plugin-jsx-a11y": "^6.0.3",
+		"eslint-loader": "^2.1.0",
+		"eslint-plugin-import": "^2.14.0",
+		"eslint-plugin-jsx-a11y": "^6.1.1",
 		"eslint-plugin-node": "^5.2.1",
 		"eslint-plugin-promise": "^3.6.0",
-		"eslint-plugin-react": "^7.6.1",
+		"eslint-plugin-react": "^7.11.1",
 		"eslint-plugin-standard": "^3.0.1",
 		"express": "^4.16.2",
 		"express-session": "^1.15.6",
-		"extract-text-webpack-plugin": "^3.0.2",
-		"file-loader": "^1.1.6",
+		"file-loader": "^2.0.0",
 		"happypack": "^5.0.0",
-		"html-webpack-plugin": "^2.30.1",
+		"html-webpack-plugin": "^3.2.0",
 		"http-proxy-middleware": "^0.17.4",
 		"husky": "^0.14.3",
 		"isomorphic-fetch": "^2.2.1",
 		"memory-fs": "^0.4.1",
+		"mini-css-extract-plugin": "^0.4.2",
 		"name-all-modules-plugin": "^1.0.1",
 		"postcss-cssnext": "^3.1.0",
 		"postcss-flexbugs-fixes": "^3.3.0",
@@ -107,8 +113,9 @@
 		"stylelint-custom-processor-loader": "^0.4.0",
 		"stylelint-processor-styled-components": "^1.3.1",
 		"url-loader": "^0.6.2",
-		"webpack": "^3.10.0",
+		"webpack": "^4.17.2",
 		"webpack-bundle-analyzer": "^2.10.0",
-		"webpack-dev-server": "^2.11.1"
+		"webpack-cli": "^3.1.0",
+		"webpack-dev-server": "^3.1.8"
 	}
 }
