--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -39,6 +39,12 @@
 		"dot-notation": ["warn"],
 		"linebreak-style": "off",
 		"quotes": ["error", "double"],
-		"no-console": ["warn", { "allow": ["warn", "error", "log"] }]
+		"no-console": ["warn", { "allow": ["warn", "error", "log"] }],
+		"import/no-useless-path-segments": "off",
+		"object-curly-newline": "off",
+		"no-shadow": "off",
+		"react/jsx-one-expression-per-line": "off",
+		"jsx-a11y/label-has-associated-control": "off",
+		"jsx-a11y/label-has-for": "off"
 	}
 }
